mobile shortcuts bottom alignment glitch fix

--- a/css/shortcuts.css
+++ b/css/shortcuts.css
@@ -140,7 +140,7 @@
         position: fixed;
         right: 0;
         left: 0;
-        bottom: 0;
+        bottom: -1px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -236,11 +236,11 @@
         }
         50%{
             opacity: 0.7;
-            bottom: 0;
+            bottom: -1px;
         }
         100%{
             opacity: 1;
-            bottom: 0;
+            bottom: -1px;
         }
     }
 
